[package]
edition = '2018'
name = 'pallet-commodities'
version = '1.0.0'
authors = ['Dan Forbes <dan@parity.io>']
license = 'Unlicense'
description = 'A unique asset (NFT) interface and a Substrate FRAME implementation optimized for commodity assets.'
homepage = 'https://github.com/danforbes/pallet-nft'
repository = 'https://github.com/danforbes/pallet-nft'
readme = 'README.md'
keywords = ['substrate', 'frame', 'nft', 'blockchain', 'asset']
categories = ['cryptography::cryptocurrencies', 'data-structures', 'no-std']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.116", optional = true }

# Substrate dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
